01: Add access modifiers, move sorting method to utils

--- a/homeworks/01-bubble-sort/.eslintrc.json
+++ b/homeworks/01-bubble-sort/.eslintrc.json
@@ -46,7 +46,8 @@
         "@typescript-eslint/no-use-before-define": ["error"],
         "object-curly-newline": ["error", {
             "multiline": true
-        }]
+        }],
+        "react/state-in-constructor": "off"
     },
     "overrides": [
         {
