--- a/homeworks/01-bubble-sort/.eslintrc.json
+++ b/homeworks/01-bubble-sort/.eslintrc.json
@@ -27,26 +27,29 @@
         }
     },
     "rules": {
+        "@typescript-eslint/no-shadow": [ "error" ],
+        "@typescript-eslint/no-unused-vars": "error",
+        "@typescript-eslint/no-use-before-define": [ "error" ],
+        "@typescript-eslint/type-annotation-spacing": [
+            "error",
+            { "after": true }
+        ],
         "import/extensions": 0,
-        "react/jsx-filename-extension": [ 2, {
-            "extensions": [".js", ".jsx", ".ts", ".tsx"]
-        }],
         "import/prefer-default-export": "off",
+        "no-shadow": "off",
+        "no-unused-vars": "off",
+        "no-use-before-define": "off",
+        "object-curly-newline": [
+            "error",
+            { "multiline": true }
+        ],
+        "react/button-has-type": "off",
+        "react/jsx-filename-extension": [
+            2,
+            { "extensions": [ ".js", ".jsx", ".ts", ".tsx" ] }
+        ],
         "react/no-array-index-key": "off",
         "react/prop-types": "off",
-        "react/button-has-type": "off",
-        "@typescript-eslint/type-annotation-spacing": ["error", {
-            "after": true
-        }],
-        "no-shadow": "off",
-        "@typescript-eslint/no-shadow": ["error"],
-        "no-unused-vars": "off",
-        "@typescript-eslint/no-unused-vars": "error",
-        "no-use-before-define": "off",
-        "@typescript-eslint/no-use-before-define": ["error"],
-        "object-curly-newline": ["error", {
-            "multiline": true
-        }],
         "react/state-in-constructor": "off"
     },
     "overrides": [
