--- a/homeworks/03-data-structure/.eslintrc.json
+++ b/homeworks/03-data-structure/.eslintrc.json
@@ -15,14 +15,22 @@
         "@typescript-eslint"
     ],
     "rules": {
-        "no-unused-vars": "off",
+        "@typescript-eslint/no-empty-function": [ "error" ],
+        "@typescript-eslint/no-shadow": [ "error" ],
         "@typescript-eslint/no-unused-vars": "error",
+        "@typescript-eslint/no-useless-constructor": [ "error" ],
+        "import/extensions": [
+            "error",
+            "ignorePackages",
+            {
+                "ts": "never",
+                "tsx": "never"
+            }
+        ],
+        "no-empty-function": "off",
         "no-shadow": "off",
-        "@typescript-eslint/no-shadow": ["error"],
-        "import/extensions": ["error", "ignorePackages", {
-            "ts": "never",
-            "tsx": "never"
-        }]
+        "no-unused-vars": "off",
+        "no-useless-constructor": "off"
     },
     "settings": {
         "import/resolver": {
