--- a/homeworks/06-advanced-redux/.eslintrc.json
+++ b/homeworks/06-advanced-redux/.eslintrc.json
@@ -16,6 +16,7 @@
         "@typescript-eslint"
     ],
     "rules": {
+        "@typescript-eslint/no-shadow": ["error"],
         "@typescript-eslint/no-unused-vars": "error",
         "@typescript-eslint/no-use-before-define": ["error"],
         "import/extensions": ["error", "ignorePackages", {
@@ -23,6 +24,7 @@
             "tsx": "never"
         }],
         "import/prefer-default-export": "off",
+        "no-shadow": "off",
         "no-unused-vars": "off",
         "no-use-before-define": "off",
         "no-underscore-dangle": "off"
