--- a/homeworks/07-mars-viewer/.eslintrc.json
+++ b/homeworks/07-mars-viewer/.eslintrc.json
@@ -30,7 +30,8 @@
         "import/prefer-default-export": "off",
         "no-shadow": "off",
         "no-unused-vars": "off",
-        "no-use-before-define": "off"
+        "no-use-before-define": "off",
+        "no-underscore-dangle": "off"
     },
     "settings": {
         "import/resolver": {
