--- a/homeworks/09-node-chokidar/package.json
+++ b/homeworks/09-node-chokidar/package.json
@@ -11,6 +11,7 @@
     "start": "ts-node app.ts"
   },
   "devDependencies": {
+    "@types/node": "^15.6.1",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
     "@typescript-eslint/parser": "^4.25.0",
     "eslint": "^7.27.0",
