--- a/homeworks/09-node-chokidar/.eslintrc.json
+++ b/homeworks/09-node-chokidar/.eslintrc.json
@@ -15,6 +15,9 @@
         "@typescript-eslint"
     ],
     "rules": {
+        "@typescript-eslint/no-empty-function": ["error"],
+        "@typescript-eslint/no-unused-vars": ["error"],
+        "@typescript-eslint/no-useless-constructor": ["error"],
         "import/extensions": [
             "error",
             "ignorePackages",
@@ -23,7 +26,10 @@
                 "tsx": "never"
             }
         ],
-        "import/prefer-default-export": "off"
+        "import/prefer-default-export": "off",
+        "no-empty-function": "off",
+        "no-unused-vars": "off",
+        "no-useless-constructor": "off"
     },
     "settings": {
         "import/resolver": {
