--- a/homeworks/09-node-chokidar/package.json
+++ b/homeworks/09-node-chokidar/package.json
@@ -18,5 +18,8 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.4",
     "typescript": "^4.3.2"
+  },
+  "dependencies": {
+    "csvtojson-converter": "^2.0.4"
   }
 }
